objects/Event_Task__c.object
<CustomObject>
    <description>Represents tasks associated with event planning.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user assigned to complete the task.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The deadline for completing the task.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Plan__c</fullName>
        <description>The event plan associated with the event task.</description>
        <label>Event Plan</label>
        <referenceTo>Event_Plan__c</referenceTo>
        <relationshipLabel>Event Tasks</relationshipLabel>
        <relationshipName>Event_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>The name of the task.</description>
        <label>Task Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <description>The current status of the task.</description>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Event Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>